# repo-first-starter

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  docs-candidates.md  pyproject.toml
docs/: agent-code-entropy-gate.md  compatibility.md  improvement-roadmap.md  ranking-report.md
scripts/: install-skill.sh
skills/repo-first-base-selection/: SKILL.md
src/repo_first_starter/: __init__.py  cli.py
tests/: test_scoring.py
