[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-first-starter"
version = "0.1.0"
description = "Repo-first discovery, curated-list scoring, and entropy-gate CLI for AI build agents"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Mike Costea / Hermes Agent"}]
keywords = ["github", "repo-discovery", "ai-agents", "project-scoping"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

[project.scripts]
repo-first = "repo_first_starter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
